<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	
	>
	<TableRow>
		<TextView
	    android:layout_width="100dip"
	    android:layout_height="30dip"
	    android:paddingTop="5dip" 		
			android:text="@string/ItemName"/>
		<TextView
	    android:layout_width="100dip"
	    android:layout_height="30dip"
	    android:paddingTop="5dip" 		
			android:text="@string/PersonName"/>
		<!-- <TextView
    android:layout_width="100dip"
    android:layout_height="30dip"
    android:paddingTop="5dip" 		
			android:text="@string/Organization"/>
		<TextView
    android:layout_width="150dip"
    android:layout_height="30dip"
    android:paddingTop="5dip" 		
			android:text="@string/AlarmTime"/>
		<TextView
    android:layout_width="100dip"
    android:layout_height="30dip"
    android:paddingTop="5dip" 		
			android:text="@string/Position"/>
		<TextView
    android:layout_width="100dip"
    android:layout_height="30dip"
    android:paddingTop="5dip" 		
			android:text="@string/IsAllowed"/> -->
			
			<TextView
    android:layout_width="0dip"
    android:layout_height="30dip"
    android:paddingTop="0dip" 		
			android:text="@string/Organization"/>
		<TextView
    android:layout_width="0dip"
    android:layout_height="30dip"
    android:paddingTop="0dip" 		
			android:text="@string/AlarmTime"/>
		<TextView
    android:layout_width="0dip"
    android:layout_height="0dip"
    android:paddingTop="0dip" 		
			android:text="@string/Position"/>
		<TextView
    android:layout_width="0dip"
    android:layout_height="0dip"
    android:paddingTop="0dip" 		
			android:text="@string/IsAllowed"/>
			
	</TableRow>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="#FF00FF00" />	
</TableLayout>