<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
 	 <TableRow
       android:id="@+id/tableRow6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" 
       android:gravity="center">
		<TextView
	    	android:layout_width="100pt" 
	    	android:layout_height="fill_parent"
	    	android:textSize="8pt"
			android:text="@string/serverip"
			android:gravity="center" />
		<EditText
        android:id="@+id/txtServerip"
        android:layout_width="200pt"
        android:layout_height="wrap_content" >
      </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">
    	<TextView
	    	android:layout_width="100pt" 
	    	android:layout_height="fill_parent"
	    	android:textSize="8pt"
			android:text="@string/username"
			android:gravity="center" />

		<EditText
		    android:id="@+id/txtUsername"
		    android:layout_width="200pt"
		    android:layout_height="wrap_content" >
			
      </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">
		<TextView
	    	android:layout_width="100pt" 
	    	android:layout_height="fill_parent"
	    	android:textSize="8pt"
			android:text="@string/password"
			android:gravity="center" />
		<EditText
		    android:id="@+id/txtPassword"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="textPassword" >
		   
		</EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">
		<TextView
	    	android:layout_width="100pt" 
	    	android:layout_height="fill_parent"
	    	android:textSize="8pt"
			android:text="@string/localip"
			android:gravity="center" />
		<Spinner
		    android:id="@+id/spinLocalip"
		    android:layout_width="wrap_content"
		    android:layout_height="20pt" >
		    
		</Spinner>
		    
		
		
    </TableRow>
    

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">
        <Button
	        android:id="@+id/btnLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="150pt"
	        android:layout_marginRight="-100pt"
	        android:text="@string/login" />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150pt"
            android:text="@string/exit" />
        
    </TableRow>



</TableLayout>